# grv241112

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile
src/grav_giant_test/: main.py
