[project]
name = "grav-giant-test"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "g.siaw", email = "gsiaw.dev@gmail.com" }]
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/grav_giant_test"]
